--- a/styles.css
+++ b/styles.css
@@ -3,85 +3,72 @@ body {
   padding: 0;
   height: 100vh;
   background: #dceaf0;
-  overflow: hidden;
 }
-.welcome {
-  color: black;
-  font-size: 30px;
-  margin-bottom: 0;
-  font-family: "Open Sans", sans-serif;
-}
-.header {
-  margin-top: 45px;
-  flex-direction: column;
-  justify-content: space-evenly;
+h1 {
   text-align: center;
-  padding-bottom: 0px;
-  padding-top: 0px;
+  margin-bottom: 0;
 }
-.h2 {
+h2 {
+  text-align: center;
+  margin-top: 0;
   font-style: italic;
-  margin-top: 0px;
+  color: gray;
 }
-
-.center {
+.form-container {
+  width: 40%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 400px;
-  background: white;
-  text-align: center;
-  color: #c8c4c2;
-  height: 70vh;
 }
-.center form {
-  padding: 0 40px;
+form {
+  padding: 20px;
+  background-color: white;
   box-sizing: border-box;
 }
-form .text_field {
-  position: relative;
-  border-bottom: 2px solid #adadad;
-  margin: 20px 0;
-}
-.text_field input {
+input#email {
   width: 100%;
-  padding: 0 auto;
-  height: 40px;
-  font-size: 16px;
-  border: none;
+  margin: 10px 0;
+  padding: 5px;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  box-sizing: border-box;
 }
-input#pass {
-  margin: 0 auto;
-  margin-top: 10px;
-}
-.text_field button {
-  cursor: pointer;
-}
-.signin button {
-  padding: 10px;
-  width: 80%;
-  background: #3598db;
-  border-style: none;
-  color: white;
-  font-size: 15px;
-  cursor: pointer;
-  border-radius: 20px;
+input#password {
+  display: inline-block;
+  width: 100%;
+  margin: 10px 0;
+  padding: 5px;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  box-sizing: border-box;
 }
 .forgot {
-  display: flex;
-  justify-content: space-around;
   text-align: right;
-  padding-right: 5px;
 }
-button {
+.forgot button {
+  padding-right: 0;
   border: none;
-  background: none;
-  margin-top: 20px;
+  background-color: white;
+  cursor: pointer;
+  margin: 10px 0;
+}
+.signin {
+  background-color: dodgerblue;
+  margin-bottom: 0;
+  color: white;
+  border-radius: 20px;
+  width: 100%;
+  padding: 5px;
+  cursor: pointer;
 }
 .account {
-  margin-top: 30px;
-  text-align: center;
-  font-size: 16px;
+  border: none;
+  background-color: white;
   cursor: pointer;
+  width: 100%;
+  padding: 5px;
+  margin: 10px 0;
 }
